update WS_04 (pre)

--- a/02_Workshops/DSML_WS_04_Visualization/DSML_WS_04_Visualization_pre.ipynb
+++ b/02_Workshops/DSML_WS_04_Visualization/DSML_WS_04_Visualization_pre.ipynb
@@ -620,6 +620,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# parallel coordinates plot: visualising multidimensional data\n",
+    "\n",
+    "# let's import the already familiar iris-dataset for this one\n",
+    "iris = pd.read_csv(\"iris.csv\")\n",
+    "\n",
+    "iris.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# note that Pandas has an integrated plotting module that is built on Matplotlib\n",
+    "pd.plotting.parallel_coordinates(iris, class_column = 'Species', cols = [\"Sepal.Length\", \"Sepal.Width\", \"Petal.Length\", \"Petal.Width\"], color=('red', 'blue', 'green'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
