update WS_04 (pre)

--- a/02_Workshops/DSML_WS_04_Visualization/DSML_WS_04_Visualization_pre.ipynb
+++ b/02_Workshops/DSML_WS_04_Visualization/DSML_WS_04_Visualization_pre.ipynb
@@ -59,6 +59,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -640,7 +641,9 @@
    "outputs": [],
    "source": [
     "# note that Pandas has an integrated plotting module that is built on Matplotlib\n",
-    "pd.plotting.parallel_coordinates(iris, class_column = 'Species', cols = [\"Sepal.Length\", \"Sepal.Width\", \"Petal.Length\", \"Petal.Width\"], color=('red', 'blue', 'green'))"
+    "pd.plotting.parallel_coordinates(iris, class_column = 'Species', cols = [\"Sepal.Length\", \"Sepal.Width\", \"Petal.Length\", \"Petal.Width\"], color=('red', 'blue', 'green'))\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
