update WS_10 (pre)

--- a/02_Workshops/DSML_WS_10_Classification/DSML_WS_10_Classification_pre.ipynb
+++ b/02_Workshops/DSML_WS_10_Classification/DSML_WS_10_Classification_pre.ipynb
@@ -220,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this function scales class_membership so that M equals 1 and B equals 0\n",
+    "# this function scales class_membership so that M equals 1 and B equals -1\n",
     "def rescale_classes(class_membership, true_label='M'):\n",
     "    return (class_membership == true_label).astype(int) * 2 - 1\n",
     "\n",
@@ -321,7 +321,7 @@
    "source": [
     "hy = np.linspace(-3,3,1000)\n",
     "plt.figure(figsize = (10,8))\n",
-    "plt.plot(hy, np.square(hy), c=\"lightgrey\")\n",
+    "plt.plot(hy, np.square(hy-1), c=\"lightgrey\")\n",
     "plt.plot(hy,(hy<=0))\n",
     "plt.plot(hy, np.log(1+np.exp(-hy)))\n",
     "plt.plot(hy, np.maximum(1 - hy, 0))\n",
